2004-10-26  Julien Puydt  <jpuydt@free.fr>

	* lib/Makefile.am: Reenabled compilation of the gm_events.
	* src/main_window.cpp: Added initialization of the gm_events.
	* src/endpoint.cpp, src/endpoint.h: Put back triggering of gm_events.
	
2004-10-24  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Changed registration timeout, into registration
	ttl.

	* src/ils.cpp: Fixed error reporting.

	* src/stunclient.cpp: Fixed error message.

2004-10-21  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.

	* configure.in: Incremented version number, 1.2 is at the door.

	* src/endpoint.cpp, src/gnomemeeting.cpp, src/main_window.cpp,
	src/urlhandler.cpp, src/urlhandler.h: Added possibility to directly
	transfer an incoming call from the incoming call popup. Hide the
	incoming call popup as soon as an action is taken.

2004-10-21  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Removed "Find all contacts". 

2004-10-20  Damien Sandras  <dsandras@gnome.org>

	* lib/stock-icons.c, lib/stock-icons.h, pixmaps/Makefile.am, 
	pixmaps/status-auto-answer-16.png, pixmaps/status-busy-16.png,
	pixmaps/status-do-not-disturb-16.png, 
	pixmaps/status-free-for-chat-16.png, src/addressbook_window.cpp,
	src/common.h, src/connection.cpp, src/endpoint.cpp, src/ils.cpp,
	src/main_window.cpp, src/tray.cpp: Replaced Busy by DND and Free For
	Chat by auto-answer.

	* src/ils.cpp: Display minor error messages in the statusbar. No
	annoying popup.

	* src/tray.cpp: Fixed about menu icon.

2004-10-19  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.

	* configure.in: Incremented version number. Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Added key for gatekeeper registration
	renewal timeout.

	* src/endpoint.cpp, src/endpoint.h, src/gatekeeper.cpp, 
	src/pref_window.cpp: Added "force registration renewal" timeout for
	the gatekeeper registration so that users can force the renewing