@@ -61,6 +61,10 @@ if ! DISABLE_GNOME
 gnomemeeting_SOURCES += bonobo_component.cpp bonobo_component.h
 endif
 
+if HAS_DBUS 
+gnomemeeting_SOURCES += dbus_component.cpp dbus_component.h
+endif
+
 gnomemeeting_LDADD = \
 	@GNOMEMEETING_LIBS@ \
 	$(top_builddir)/lib/libgnomemeeting.la
