@@ -1,3 +1,14 @@
+2004-10-27  Julien Puydt  <jpuydt@free.fr>
+
+	* configure.in: Added the --enable-dbus switch.
+	* gnomemeeting.service.in, Makefile.am: Made it possible to launch
+	gnomemeeting through DBUS.
+	* src/dbus_component.cpp, src/dbus_component.h: Implementation of a
+	DBUS remote control.
+	* src/Makefile.am: Added compilation of the DBUS component.
+	* src/gnomemeeting.cpp, src/gnomemeeting.h: Hooked the DBUS component
+	to the rest of gnomemeeting.
+	
 2004-10-26  Julien Puydt  <jpuydt@free.fr>
 
 	* lib/Makefile.am: Reenabled compilation of the gm_events.
